# Cpp-TemplateProject

./: .gitignore  CMakeLists.txt  Makefile.linux.mak  README.md  go.sh
assembly/: main.cc  test.cc
assembly/src/: test.cc
assembly/src/lib/: lib.cc  lib.h
